assets/sass/header/_main-menu.scss
.tm-table {
	display: table;
	table-layout: fixed;
}

.table-cell {
	display: table-cell;
	vertical-align: middle;
}

a:focus,
a:active {
	text-decoration: none;
}

.navigation {
	.tm-table {
		width: 100%;
	}
	.width-navigation {
		text-align: right;
		ul {
			li {
				list-style: none;
				display: inline-block;
				vertical-align: middle;
			}
		}
		font-size: $restaurant_wp_font_size_main_menu;
		.inner-navigation {
			a {
				color: $restaurant_wp_main_menu_text_color;
				font-weight: $restaurant_wp_font_weight_main_menu;
				&:hover {
					color: $restaurant_wp_main_menu_text_hover_color;
					text-decoration: none;
				}
			}
			.navbar {
				margin-bottom: 0;
				border: none;
				padding: 0;
				text-align: right;
				min-height: inherit;
				> li {
					float: none;

					&.menu-item-has-children {
						> a {
							//padding-right: 40px;
							&:before {
								content: "\f107";
								font-family: "FontAwesome";
								position: absolute;
								right: 5px;
							}

							&:hover {
								&:after {
									color: $restaurant_wp_body_primary_color;
								}
							}
						}
					}
					> a {
						text-transform: uppercase;
					}
				}

				.current-menu-item {
					a {
						color: $restaurant_wp_main_menu_text_hover_color;
					}
				}

				li {
					a {
						padding: 10px 20px;
						display: block;
					}
				}
			}
			.menu-right {
				margin-bottom: 0;
				display: inline-block;
				padding-left: 20px;
				border-left: 1px solid $restaurant_wp_main_menu_text_color;
			}
		}
	}
}

#masthead {
	&.header-overlay {
		position: absolute;
		right: 0;
		left: 0;
		z-index: 999;
	}

	&.header-default {
		position: relative;
		background-color: $restaurant_wp_bg_main_menu_color;
	}

	&.site-header {
		&.no-affix-top {
			.no-sticky-logo {
				display: none;
			}
			.sticky-logo {
				display: block;
			}
		}

		&.affix-top {
			background-color: transparent;
			@include transition(all ease-out .3s);
			.width-logo {
				.no-sticky-logo {
					display: block;
				}
				.sticky-logo {
					display: none;
				}
			}
		}

		&.affix {
			z-index: 99;
			position: fixed;
			width: 100%;
			padding-top: 10px;
			padding-bottom: 10px;
			background-color: rgba(10, 10, 10, 0.85);
			@include transition(all ease-out .3s);
			.width-logo {
				.no-sticky-logo {
					display: none;
				}
				.sticky-logo {
					display: block;
				}
			}
		}
	}
}

@media (min-width: $screen-sm-min) {
	.site-header {
		padding-top: 20px;
		padding-bottom: 20px;
	}

	.navigation {
		.width-logo {
			a {
				&:hover {
					text-decoration: none;
				}
				img {
					@include transition(all ease-out .3s);
				}
			}
		}
		.width-navigation {
			.inner-navigation {
				display: table;
				float: right;
				.navbar {
					display: table-cell;
					vertical-align: middle;
					width: auto;
					> li {
						position: relative;
						.sub-menu {
							min-width: 200px;
							position: absolute;
							top: auto;
							right: 0;
							display: none;
							z-index: 999;
							padding: 0;
							margin: 0;
							background-color: #fff;
							box-shadow: 0 2px 3px rgba(0, 0, 0, .09);
							-moz-box-shadow: 0 2px 3px rgba(0, 0, 0, .09);
							-o-box-shadow: 0 2px 3px rgba(0, 0, 0, .09);
							-ms-box-shadow: 0 2px 3px rgba(0, 0, 0, .09);
							li {
								width: 100%;
								text-align: left;
								position: relative;
								&:after {
									content: "";
									position: absolute;
									left: 20px;
									right: 20px;
									height: 1px;
									background-color: #eee;
								}
								&:last-child {
									&:after {
										display: none;
									}
								}
								a {
									color: #3a3a3a;
									padding: 14px 20px;
									&:hover {
										color: $restaurant_wp_body_primary_color;
									}
								}
								> .sub-menu {
									top: 0;
									right: 100%;
								}
							}
						}
					}
				}

				.menu-right {
					display: table;
					right: 0;
					section {
						display: table-cell;
						vertical-align: middle;
					}
				}
			}
		}
	}
}

.content-pusher {
	position: relative;
	left: 0;
	z-index: 99;
	height: 100%;
	@include transition(transform 400ms ease-in-out);
}

#wrapper-container {
	@include transition(transfrom 400ms ease-in-out);
	overflow: hidden;
}

@media (max-width: $screen-xs-max) {
	.admin-bar {
		.mobile-menu-container {
			padding-top: 46px;
		}
		.affix {
			top: 0;
		}
	}

	.site-header.header-overlay {
		&.affix {
			position: fixed;
		}
	}

	.site-header {
		padding-top: 20px;
		padding-bottom: 20px;
	}

	.width-navigation {
		display: none;
	}

	.width-logo {
		float: left;
		margin-left: 20px;
	}

	.mobile-menu-container {
		position: fixed;
		top: 0;
		bottom: 0;
		overflow: auto;
		width: 300px;
		background-color: #222;
		@include transition(transform 400ms ease-in-out);
		-webkit-transform: translate(-300px);
		-moz-transform: translate(-300px);
		-ms-transform: translate(-300px);
		-o-transform: translate(-300px);
		transform: translate(-300px);
		.navbar-nav {
			margin: 0;
		}
	}

	.wrapper {
		.menu-right {
			padding: 0;
			margin: 0;
			.widget {
				margin: 0;
			}
			.list-links {
				padding-left: 20px;
				li {
					padding-top: 20px;
					display: inline-block;
					a {
						color: #d8d8d8;
						padding: 10px 10px;
					}
				}
			}
		}

		.navbar-nav {
			li {
				.current_page_item,
				.current-menu-item {
					> a {
						color: $restaurant_wp_body_primary_color;
					}
				}
			}

			> li {
				&.current_page_item,
				&.current-menu-item {
					> a {
						color: $restaurant_wp_body_primary_color;
					}
				}

				&.current_page_ancestor,
				&.current-menu-ancestor {
					.icon-toggle {
						color: $restaurant_wp_body_primary_color;
					}
				}

				a {
					color: #d8d8d8;
					&:hover {
						background-color: transparent;
						text-decoration: none;
					}
					&:focus {
						background-color: transparent;
					}
				}

				.icon-toggle {
					cursor: pointer;
					position: absolute;
					top: 0;
					right: 0;
					padding: 5px 25px;
					z-index: 9;
					font-size: 20px;
					color: #d8d8d8;
				}

				> .sub-menu {
					padding-right: 20px;
					padding-left: 0;
					margin-bottom: 0;
					margin-top: 0;
					margin-left: 30px;
					display: none;
					overflow: hidden;
					position: relative;
					.sub-menu {
						margin-left: 20px;
						padding-left: 0;
						position: relative;
						&:before {
							content: '';
							width: 1px;
							height: 100%;
							position: absolute;
							left: 2px;
							top: 1px;
							display: block;
							background-color: #d8d8d8;
						}
					}
					&:before {
						content: '';
						width: 1px;
						height: 100%;
						position: absolute;
						left: 2px;
						top: 1px;
						display: block;
						background-color: #d8d8d8;
					}
					li {
						list-style: none;
						position: relative;
						margin: 8px 0;
						&:before {
							content: '';
							width: 7px;
							height: 1px;
							position: absolute;
							left: 3px;
							top: 10px;
							padding: 0;
							display: block;
							background-color: #ffffff;
						}

						a {
							padding-left: 20px;
							padding-top: 10px;
							padding-bottom: 10px;
						}
					}
				}
			}
		}
	}

	.mobile-menu-open {
		&.wrapper {
			.mobile-menu-container {
				@include transition(transform 400ms ease-in-out);
				-webkit-transform: translate(0);
				-moz-transform: translate(0);
				-ms-transform: translate(0);
				-o-transform: translate(0);
				transform: translate(0);
				display: block;
				.navbar-nav {
					margin: 0;
				}
			}

			.content-pusher {
				-webkit-transform: translate3d(300px, 0, 0);
				transform: translate3d(300px, 0, 0);
			}
		}
	}

	.menu-mobile-effect {
		display: block;
		span {
			background-color: #fff;
		}
	}

	.navbar-toggle {
		cursor: pointer;
		position: relative;
		float: none;
		display: table-cell;
		vertical-align: middle;
		margin-right: 15px;
		padding: 9px 0;
		margin-top: 0;
		margin-bottom: 0;
		width: 40px;
		background: transparent none;
	}
}

